# datascience-piscine-py

./: .gitignore  README.md  requirements.txt
0-starting/ex00/: Hello.py
0-starting/ex01/: format_ft_time.py
0-starting/ex02/: find_ft_type.py
0-starting/ex03/: NULL_not_found.py  tester.py
0-starting/ex04/: whatis.py
0-starting/ex05/: building.py
0-starting/ex06/: filterstring.py  ft_filter.py
0-starting/ex07/: sos.py
0-starting/ex08/: Loading.py
0-starting/ex09/: README.md  ft_package.py  pyproject.toml
1-array/ex00/: give_bmi.py
1-array/ex01/: array2D.py
1-array/ex02/: load_image.py
1-array/ex03/: zoom.py
1-array/ex04/: load_image.py  rotate.py
1-array/ex05/: load_image.py  pimp_image.py  tester.py
2-datatable/ex00/: load_csv.py
2-datatable/ex01/: aff_life.py
2-datatable/ex02/: aff_pop.py  load_csv.py
2-datatable/ex03/: projection_life.py
3-oop/ex00/: S1E9.py  tester.py
3-oop/ex01/: S1E7.py  S1E9.py  tester.py
3-oop/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
3-oop/ex03/: ft_calculator.py  tester.py
3-oop/ex04/: ft_calculator.py
4-dod/ex00/: statistics.py  tester.py
4-dod/ex01/: in_out.py  tester.py
4-dod/ex02/: callLimit.py
4-dod/ex03/: new_student.py  tester.py
