[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name="chenlee", email="chenlee@student.42kl.edu.my" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sirhcofe/datascience-piscine-py"